@@ -1,3 +1,7 @@
+20-May-2012 Michael Babker
+~ Only push through getID3 if the file actually exists and is local
+~ Embrace the API - Use JAccess to get the component permissions
+
 4-May-2012 Michael Babker
 # Files linked off-site had improper URLs in Feed List
 
